# bot-arena

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  vcpkg.json
assets/shaders/: mesh.glsl
docs/: camera.md  renderer-v0.1.md  renderer-v0.10.md  renderer-v0.2.md  renderer-v0.3.md  renderer-v0.4.md  renderer-v0.5.md  renderer-v0.6.md  renderer-v0.7.md  renderer-v0.8.md  renderer-v0.9.md
docs/superpowers/plans/: 2026-07-01-renderer-v0.1-command-buffer.md  2026-07-01-renderer-v0.2-mesh-sortkeys.md  2026-07-01-renderer-v0.3-job-system.md  2026-07-01-renderer-v0.4-ubo-framebuffer.md  2026-07-01-renderer-v0.5-render-pass-rtt.md  2026-07-01-renderer-v0.6-shadow-maps.md  2026-07-01-renderer-v0.7-deferred-lighting.md  2026-07-01-renderer-v0.8-pbr-materials.md  2026-07-01-renderer-v0.9-environment-cubemap-skybox.md  2026-07-01-rhi-foundation.md  2026-07-02-renderer-v0.10-image-based-lighting.md
docs/superpowers/specs/: 2026-07-01-renderer-v0.1-command-buffer-design.md  2026-07-01-renderer-v0.2-mesh-sortkeys-design.md  2026-07-01-renderer-v0.3-job-system-design.md  2026-07-01-renderer-v0.4-ubo-framebuffer-design.md  2026-07-01-renderer-v0.5-render-pass-rtt-design.md  2026-07-01-renderer-v0.6-shadow-maps-design.md  2026-07-01-renderer-v0.7-deferred-lighting-design.md  2026-07-01-renderer-v0.8-pbr-materials-design.md  2026-07-01-renderer-v0.9-environment-cubemap-skybox-design.md  2026-07-01-rhi-foundation-design.md  2026-07-02-renderer-v0.10-image-based-lighting-design.md
engine/core/: Application.cpp  Application.hpp  Arena.cpp  Arena.hpp  AssetPath.hpp  Base.hpp  GraphicsContext.hpp  Input.cpp  Input.hpp  JobSystem.cpp  JobSystem.hpp  Layer.hpp  Time.cpp  Time.hpp  Window.hpp
engine/platform/sdl/: SdlOpenGLContext.cpp  SdlOpenGLContext.hpp  SdlWindow.cpp  SdlWindow.hpp
engine/renderer/: Buffer.hpp  Camera.hpp  Camera2D.hpp  CameraController.hpp  CameraUniforms.hpp  CommandBufferPool.cpp  CommandBufferPool.hpp  DebugRenderer.cpp  DebugRenderer.hpp  FlyCameraController.hpp  Framebuffer.hpp  LightUniforms.hpp  MeshRenderer.cpp  MeshRenderer.hpp  MinimapRect.hpp  OrbitCameraController.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  PointLight.hpp  RenderBackend.cpp  RenderBackend.hpp  RenderCommand.hpp  RenderPass.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  ResourceRegistry.cpp  ResourceRegistry.hpp  Shader.hpp  TextureCube.hpp  UniformBuffer.hpp  VertexArray.hpp
engine/renderer/opengl/: OpenGLBackend.cpp  OpenGLBackend.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTextureCube.cpp  OpenGLTextureCube.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
game/: BotArenaGame.cpp  BotArenaGame.hpp
src/: main.cpp
tests/: test_arena.cpp  test_buffer_layout.cpp  test_camera_uniforms.cpp  test_command_buffer_pool.cpp  test_job_system.cpp  test_light_view_proj.cpp  test_mesh_renderer.cpp  test_minimap_rect.cpp  test_point_light_ring.cpp  test_render_queue.cpp  test_resource_registry.cpp  test_shader_parser.cpp  test_sort_key.cpp
